# single-lib

./: Cargo.toml  README.md  cargo-generate.toml
my-exe/: Cargo.toml
my-exe/src/: main.rs
my-lib/: Cargo.toml
{{project-name}}/: Cargo.toml
