[workspace]
resolver = "2"
members = ["{{project-name}}"]

[workspace.package]
authors = ["{{authors}}"]
description = "{{description}}"
repository = "https://github.com/{{github-username}}/{{project-name}}"
homepage = "https://github.com/{{github-username}}/{{project-name}}"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5" }
tokio = { version = "1.36", features = ["full"] }
